# maclaren-marsaglia

./: CMakeLists.txt  README.md  main.cpp
headers/: MacLarenMarsagliaGenerator.h  MultiplicativeCongruentialGenerator.h  RandomGenerator.h  StandartRandomGenerator.h
src/: MacLarenMarsagliaGenerator.cpp  MultiplicativeCongruentialGenerator.cpp  RandomGenerator.cpp  StandartRandomGenerator.cpp
